<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        />

    <ImageView
        android:id="@+id/imvPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"/>

<Button
    android:id="@+id/singOut"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/sing_button_out"
    android:layout_gravity="center"
    android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/donwload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descargar"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CARGAR"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

</LinearLayout>